Fix layout issues

--- a/src/app/modules/management/modules/department/components/view-department/view-department.component.scss
+++ b/src/app/modules/management/modules/department/components/view-department/view-department.component.scss
@@ -1,4 +1,9 @@
 @use "../../../../../../../page-heading.scss";
+
+tui-loader {
+  width: 100%;
+}
+
 .section-title {
   margin-top: 3rem;
   font-size: 1rem;
